# MarketServer

./: .gitignore  .gitmodules  Dockerfile_test  Jenkinsfile  Jenkinsfile_demo4quote  README.md  gen_protos.sh  gen_protos_dock.sh  gen_protos_lsz.sh  kserver.ks
FrontServer/platform/: CMakeLists.txt  config.json  front_server_declare.h  server_engine.cpp  server_engine.h  server_main.cpp
comm_lib/cpp/: CMakeLists.txt  comm.cpp  comm.h  comm_declare.h  comm_interface_define.h  comm_log.h  comm_type_def.h  cp.sh  decode_processer.cpp  decode_processer.h  depth_processor.cpp  depth_processor.h  interface_define.h  json_serializer.cpp  json_serializer.h  kafka_server.cpp  kafka_server.h  kline_processor.cpp  kline_processor.h  protobuf_serializer.cpp  protobuf_serializer.h  rpc.cpp  rpc.h  rpc_server.cpp  rpc_server.h  trade_processor.cpp  trade_processor.h  util.cpp  util.h
comm_lib/test_code/: CMakeLists.txt  test.cpp
data_server/cpp/: CMakeLists.txt  build.sh  global_declare.h  main.cpp  server_engine.cpp  server_engine.h
data_server/test_client/: CMakeLists.txt  global_declare.h  grpc_client.cpp  grpc_client.h  test.cpp
demo/: CMakeLists.txt  Dockerfile  build.sh  jenkinsfile  main.cpp
demo4hub/cpp/: CMakeLists.txt  build.sh  config.json  global_declare.h  hub_config.cpp  hub_config.h  hub_entity.cpp  hub_entity.h  hub_interface.cpp  hub_interface.h  hub_struct.h  update_kline.h  update_quote.h  update_stream_engine.h  update_trade.h  updater_quote.h
demo4hub/test/: CMakeLists.txt  main.cpp
demo4hub_demo/: CMakeLists.txt  a.out  build.sh  config.json  main.cpp  test.cpp
demo4kline/cpp/: CMakeLists.txt  build.sh  config.json  grpc_entity.cpp  grpc_entity.h  kline_database.cpp  kline_database.h  kline_mixer.cpp  kline_mixer.h  kline_server.cpp  kline_server.h  kline_server_config.h  kline_server_define.h  main.cpp  redis_kline_source.cpp  redis_kline_source.h  server_endpoint.cpp  server_endpoint.h
demo4quote/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  api.grpc.pb.cc  api.grpc.pb.h  api.pb.cc  api.pb.h  api.proto  api_pb2.py  cmake_install.cmake  demo4quote  gen_protos.sh  grpc_publisher.h  main.cpp  main_bak.cpp  quote_dumper.h  quote_mixer.h  redis_example.json  redis_hub.cpp  redis_hub.h  script.txt  server.py  snap_task.cpp  snap_task.h  stream_engine.h  stream_engine_define.h
demo4quote/cpp/: CMakeLists.txt  api.pb.cc  api.pb.h  build.sh  config.json  configuration_client.cpp  converter.h  gogo.pb.cc  gogo.pb.h  grpc_call.h  grpc_caller.cpp  grpc_caller.h  grpc_client.h  grpc_entity.cpp  grpc_entity.h  grpc_publisher.h  grpc_server.cpp  grpc_server.h  hedges.json  kafka_quote.cpp  kafka_quote.h  kline_database.cpp  kline_database.h  kline_mixer.cpp  kline_mixer.h  kline_mixer_test.h  main.cpp  market_risk.json  nacos_client.cpp  nacos_client.h  nacos_config.json  quote_dumper.h  quote_mixer.cpp  quote_mixer.h  quote_mixer2.cpp  quote_mixer2.h  quote_single.cpp  quote_single.h  redis_hub.cpp  redis_hub.h  (+24 more)
demo4quote/protos/: api.proto  stream_engine_server.proto
demo4quote/python/: api_pb2.py  server.py  stream_engine_server_pb2.py  stream_engine_server_pb2_grpc.py
demo4quote/script/: start.sh  stop.sh
demo4risk/cpp/: CMakeLists.txt  account_updater.h  api.grpc.pb.cc  api.grpc.pb.h  api.pb.cc  api.pb.h  build.sh  config.json  config_updater.h  converter.h  datacenter.cpp  datacenter.h  empty.pb.cc  empty.pb.h  global_declare.h  grpc_call.h  grpc_caller.cpp  grpc_caller.h  grpc_entity.cpp  grpc_entity.h  grpc_quote.h  grpc_server.cpp  grpc_server.h  main.cpp  nacos_config.json  quote_updater.h  risk_controller.cpp  risk_controller.h  risk_controller_config.h  risk_controller_define.h  riskcontrol_worker.cpp  riskcontrol_worker.h  stream_engine_server.grpc.pb.cc  stream_engine_server.grpc.pb.h  stream_engine_server.pb.cc  stream_engine_server.pb.h  updater_account.h  updater_configuration.cpp  updater_configuration.h  updater_order.h  (+1 more)
demo4risk/test_client/: CMakeLists.txt  global_declare.h  grpc_client.cpp  grpc_client.h  main.cpp  test.cpp
frontserver/: CMakeLists.txt  FrontServerIntro.md  Update.md
frontserver/include/: hub_struct.h  update_kline.h  updater_quote.h
frontserver/monitor/: config.json  disio.py  io.py  monitor.py  start_monitor.sh  test.py  util.py  write.py
frontserver/platform/: CMakeLists.txt  ErrorDefine.hpp  build.sh  config.json  front_server_declare.h  server_engine.cpp  server_engine.h  server_main.cpp
frontserver/script/: start.sh
frontserver/test_client/: CMakeLists.txt  Logger.py  client.cpp  test.py  test2.py
frontserver/test_server/: CMakeLists.txt  main.cpp  server.cpp
frontserver/uSockets/: Makefile  make.sh
pandora/: CMakeLists.txt  envdeclare.h  pandora_declare.h
pandora/field/: field_json.h  field_json.h.tpl
pandora/market/: market_update.h
pandora/messager/: ding_talk.cpp  ding_talk.h  ding_talk_msgcenter.cpp  ding_talk_msgcenter.h  messager.h  redis_publisher.cpp  redis_publisher.cpp.tpl  redis_publisher.h  redis_publisher.h.tpl  ut_log.cpp  ut_log.h
pandora/order/: order_manager.h
pandora/package/: channel.h  code_gen.sh  package.h  package_debug.cpp  package_debug.h  package_manager.h  package_manager.h.tpl  package_station.h
pandora/position/: asset_cell.cpp  asset_cell.h  asset_factory.h  currency_balance.cpp  currency_balance.h  digital_position_handler.cpp  digital_position_handler.h  instrument_property.h  position_handler.h  position_module.h  position_settle.cpp  position_settle.h
pandora/redis/: redis_api.cpp  redis_api.h
pandora/util/: float_util.h  hash_util.h  io_service_pool.h  json.hpp  lock_free_queue.h  mem_util.h  path_util.h  python_type_convert.hpp  singleton.hpp  stl_util.h  thread_base.h  thread_basepool.h  time_util.cpp  time_util.h
riskcontrol_server/cpp/: CMakeLists.txt  depth_riskctrl.cpp  depth_riskctrl.h  global_declare.h  nacos_config.cpp  nacos_config.h  native_config.h  risk_interface_define.h  riskcontrol_worker.cpp  riskcontrol_worker.h  struct_define.h  test.cpp  test.h  updater_account.h  updater_order.h
test/TestRedis/: CMakeLists.txt  (+5 more)
(+287 files in other folders)
