CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(demo)

###############################################################################################
INCLUDE_DIRECTORIES("../lib")
LINK_DIRECTORIES("../lib")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

###############################################################################################
add_executable(demo ${DIR_SRCS})
###############################################################################################