CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(demo)

###############################################################################################
INCLUDE_DIRECTORIES("../lib")
LINK_DIRECTORIES("../lib")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

###############################################################################################
add_executable(demo ${DIR_SRCS})
###############################################################################################